# rust-poe2-scraper

./: .gitignore  Cargo.toml  README.MD  poe_items.db
migrations/: 20240118_000001_create_base_schema.sql
src/: item_fetcher.rs  main.rs  modifier_analyzer.rs
src/analyzer/: mod.rs  modifier.rs  stat_analyzer.rs  stat_collection.rs
src/data/: example_query.json  item_base_data_loader.rs  mod.rs
src/errors/: mod.rs
src/fetcher/: mod.rs  trade_api.rs
src/models/: cleaned_item.rs  item.rs  item_type.rs  mod.rs  poe_item.rs  stat_requirements.rs  stats.rs  stats_requirements.rs
src/storage/: database.rs  mod.rs
