[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }